# github-traffic-agent

./: .gitignore  Dockerfile  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  dogfood.yml
docs/: ARCHITECTURE.md  SETUP.md
src/: agent.py
src/models/: config.py  schemas.py
src/notifications/: email.py  slack.py  telegram.py
src/skills/: analyze.py  collect.py  export_csv.py  format_brief.py  intelligence.py  notify.py  predict.py  propose.py  report.py  store.py  validate.py
src/utils/: git.py  logger.py  retry.py
tests/: conftest.py  test_agent_integration.py  test_analyze.py  test_bugfixes.py  test_collect.py  test_export_csv.py  test_intelligence.py  test_notify.py  test_predict.py  test_propose.py  test_report.py  test_store.py  test_validate.py
traffic-data/memory/: audit-log.json  brief-actions.json  clones.json  views.json
traffic-data/memory/paths/: 2026-06-11.json
traffic-data/reports/: 2026-06-09-report.md  2026-06-11-report.md
